--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.9.3",
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
+    "moment": "^2.29.4",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
