--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@types/react-syntax-highlighter": "^15.5.4",
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
     "moment": "^2.29.4",
@@ -22,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.54.0"
   },
   "devDependencies": {
